; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_image.c_draw_box_width.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_image.c_draw_box_width.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @draw_box_width(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, float %6, float %7, float %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca float, align 4
  %17 = alloca float, align 4
  %18 = alloca float, align 4
  %19 = alloca i32, align 4
  store i32 %0, i32* %10, align 4
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store float %6, float* %16, align 4
  store float %7, float* %17, align 4
  store float %8, float* %18, align 4
  store i32 0, i32* %19, align 4
  br label %20

20:                                               ; preds = %42, %9
  %21 = load i32, i32* %19, align 4
  %22 = load i32, i32* %15, align 4
  %23 = icmp slt i32 %21, %22
  br i1 %23, label %24, label %45

24:                                               ; preds = %20
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %11, align 4
  %27 = load i32, i32* %19, align 4
  %28 = add nsw i32 %26, %27
  %29 = load i32, i32* %12, align 4
  %30 = load i32, i32* %19, align 4
  %31 = add nsw i32 %29, %30
  %32 = load i32, i32* %13, align 4
  %33 = load i32, i32* %19, align 4
  %34 = sub nsw i32 %32, %33
  %35 = load i32, i32* %14, align 4
  %36 = load i32, i32* %19, align 4
  %37 = sub nsw i32 %35, %36
  %38 = load float, float* %16, align 4
  %39 = load float, float* %17, align 4
  %40 = load float, float* %18, align 4
  %41 = call i32 @draw_box(i32 %25, i32 %28, i32 %31, i32 %34, i32 %37, float %38, float %39, float %40)
  br label %42

42:                                               ; preds = %24
  %43 = load i32, i32* %19, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %19, align 4
  br label %20

45:                                               ; preds = %20
  ret void
}

declare dso_local i32 @draw_box(i32, i32, i32, i32, i32, float, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
